--- a/homework/kata_fourteen.html
+++ b/homework/kata_fourteen.html
@@ -26,7 +26,7 @@
     <link rel="top" title="Code Fellows F2 Python, March-April 2015" href="../index.html" />
     <link rel="up" title="Homework Materials" href="index.html" />
     <link rel="next" title="HTML Renderer Homework Assignment" href="html_builder.html" />
-    <link rel="prev" title="Homework Materials" href="index.html" />
+    <link rel="prev" title="Homework Task 3: Explore Errors" href="task_3.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -54,7 +54,7 @@
           <a href="html_builder.html" title="HTML Renderer Homework Assignment"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Homework Materials"
+          <a href="task_3.html" title="Homework Task 3: Explore Errors"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">F2 Python</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Homework Materials</a> &raquo;</li> 
@@ -180,8 +180,8 @@ dead end?</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="index.html"
-                        title="previous chapter">Homework Materials</a></p>
+  <p class="topless"><a href="task_3.html"
+                        title="previous chapter">Homework Task 3: Explore Errors</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="html_builder.html"
                         title="next chapter">HTML Renderer Homework Assignment</a></p>
@@ -212,7 +212,7 @@ dead end?</p>
           <a href="html_builder.html" title="HTML Renderer Homework Assignment"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Homework Materials"
+          <a href="task_3.html" title="Homework Task 3: Explore Errors"
              >previous</a> |</li>
         <li><a href="../index.html">F2 Python</a> &raquo;</li>
           <li><a href="index.html" >Homework Materials</a> &raquo;</li> 
